--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,7 @@ button:hover {
 }
 
 .div-tittle {
-    padding-top: 15px 0;
+    padding-top: 200px;
 }
 
 .bg-tenue{
@@ -308,7 +308,7 @@ span.icon-search:hover {
 }
 
 .div-why-educat {
-    margin-top: 80px;
+    margin-top: 120px;
 }
 
 .div-bg-why-educat {
@@ -518,7 +518,7 @@ span.icon-search:hover {
 }
 
 .div-demos {
-    /* padding: 60px 0; */
+    padding: 60px 0;
 }
 
 .div-titulo-demos {
@@ -590,4 +590,14 @@ span.icon-search:hover {
 
 .link-demo:hover .hover button {
     transform: translateY(0%);
+}
+
+.div-organizaciones{
+    padding-top: 100px;
+}
+
+.div-organizaciones img {
+    margin-bottom: 15px;
+    padding-left: 20%;
+    width: 20%;
 }
