--- a/styles.css
+++ b/styles.css
@@ -308,7 +308,7 @@ span.icon-search:hover {
 }
 
 .div-why-educat {
-    margin-top: 120px;
+    margin-top: 150px;
 }
 
 .div-bg-why-educat {
@@ -518,7 +518,7 @@ span.icon-search:hover {
 }
 
 .div-demos {
-    padding: 60px 0;
+    padding: 60px 0 0 0;
 }
 
 .div-titulo-demos {
@@ -537,7 +537,7 @@ span.icon-search:hover {
 .demos {
     display: flex;
     flex-wrap: wrap;
-    margin: 40px 0 80px 0;
+    margin: 40px 0 10px 0;
 }
 
 .contenedor-demo {
@@ -600,4 +600,10 @@ span.icon-search:hover {
     margin-bottom: 15px;
     padding-left: 20%;
     width: 20%;
+}
+
+.div-contacto{
+    width: 45%;
+    float: left;
+    padding-left: 15px;
 }
